# quanto

./: .gitignore  .gitmodules  Dockerfile.nvidia  Dockerfile.nvidia.prebuilt  Dockerfile.rocm  Dockerfile.rocm.prebuilt  LICENSE  README.md  pyproject.toml  requirements-nvidia.txt  requirements-rocm.txt  requirements.txt
docker/: Dockerfile.cuda  Dockerfile.cuda.dev  Dockerfile.rocm  Dockerfile.rocm.dev
docs/: examples.md
outputs/llama3-8b-int4/: config.json  generation_config.json  quantization_config.json  quantization_result.json  test_result.json  tokenizer_config.json
outputs/llama3-8b-int8/: config.json  quantization_config.json  quantization_result.json  test_result.json
quanto/: __init__.py  __main__.py  auto_quantize.py  calibration.py  dequantize.py  hf_export.py  int4_pack.py  iterative_quantizer.py  layer_analyzer.py  layerwise_quant.py  lazy_layerwise_quant.py  model_assembler.py  repack_all_layers.py  repack_int4.py  sensitivity_analyzer.py
scripts/: repack.py  run_e2e_tests.sh  run_tests.sh  test_sensitivity_analysis.py
src/quanto/: __init__.py  __main__.py  constants.py
src/quanto/analysis/: __init__.py  layer_analyzer.py  sensitivity_analyzer.py
src/quanto/core/: __init__.py  auto_quantize.py  base_quantizer.py  config.py  dequantize.py  iterative_quantizer.py  layerwise_quant.py  lazy_layerwise_quant.py  unified_quantizer.py
src/quanto/core/sensitivity/: __init__.py  activation_cache.py  scorer.py  sequential_analyzer.py
src/quanto/export/: __init__.py  hf_export.py  model_assembler.py
src/quanto/utils/: __init__.py  calibration.py  int4_pack.py  logging.py  memory.py  model_utils.py
tests/: __init__.py  conftest.py  test_hf_export.py  test_iterative.py  test_pack_layer.py  test_qwen3_32b.py  test_qwen3_layerwise.py  test_unified_quantizer.py
tests/docker/: test_dequantize_llama.py  test_hf_verify.py  test_quantize_int4_llama.py  test_quantize_int4_qwen.py  test_quantize_int8_llama.py
