[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quanto"
version = "0.1.0"
description = "LLM Quantization Toolkit using AMD Quark"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Quanto Contributors"}
]
keywords = ["quantization", "llm", "transformers", "amd", "quark"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "datasets>=2.18.0",
    "safetensors>=0.4.0",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.6.0",
    "zstandard>=0.22.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
nvidia = [
    "onnx>=1.16.0",
    "onnxslim>=0.1.0",
    "onnxscript>=0.1.0",
    "nltk>=3.8.0",
    "lm-eval>=0.4.0",
    "evaluate>=0.4.0",
    "scikit-learn>=1.4.0",
    "rich>=13.0.0",
]
rocm = [
    "onnx>=1.16.0",
    "onnxslim>=0.1.0",
    "onnxscript>=0.1.0",
    "nltk>=3.8.0",
    "lm-eval>=0.4.0",
    "evaluate>=0.4.0",
    "scikit-learn>=1.4.0",
    "rich>=13.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[project.scripts]
quanto = "quanto.__main__:main"

[project.urls]
Homepage = "https://github.com/AMD-AI-Platform/quanto"
Documentation = "https://github.com/AMD-AI-Platform/quanto#readme"
Repository = "https://github.com/AMD-AI-Platform/quanto"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quanto = ["py.typed"]

# Ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    "contribs",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict
    "ARG001", # unused function argument
    "ARG002", # unused method argument
]

[tool.ruff.lint.isort]
known-first-party = ["quanto"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# Coverage configuration
[tool.coverage.run]
source = ["src/quanto"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
